# klaket

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  glama.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
apps/api/: Dockerfile  auth.go  go.mod  main.go  main_test.go  search.go  search_test.go
apps/dashboard/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
apps/dashboard/src/: App.tsx  api.ts  main.tsx  styles.css
apps/mcp/: Dockerfile  LICENSE  README.md  llms-install.md  package-lock.json  package.json  server.json
apps/mcp/src/: index.ts
apps/worker/: Dockerfile  requirements.txt
apps/worker/klaket_worker/: __init__.py  __main__.py  diarize.py  jobstore.py  notify.py  ocr.py  pipeline.py  playlist.py  translate.py  vlm.py
apps/worker/tests/: test_pipeline.py
docs/: api.md
integrations/n8n/: README.md  package-lock.json  package.json  tsconfig.json
integrations/n8n/credentials/: KlaketApi.credentials.ts
integrations/n8n/nodes/Klaket/: Klaket.node.ts
scripts/: e2e.sh
sdks/js/: README.md  package-lock.json  package.json  tsconfig.json
sdks/js/src/: index.ts
sdks/python/: README.md  pyproject.toml
sdks/python/klaket/: __init__.py  cli.py  langchain.py  llamaindex.py
